// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=false,quotesRefreshCount=2 1`] = `
{
  "adjustedReturn": {
    "usd": "39.080515271575980597564",
    "valueInCurrency": "13.843437135571579081572",
  },
  "cost": {
    "usd": "240.919484728424019402436",
    "valueInCurrency": "0.156562864428420918428",
  },
  "gasFee": {
    "effective": {
      "amount": "6.442841952e-8",
      "usd": "0.0000012885683904",
      "valueInCurrency": "6.442841952e-8",
    },
    "max": {
      "amount": "6.442841952e-8",
      "usd": "0.0000012885683904",
      "valueInCurrency": "6.442841952e-8",
    },
    "total": {
      "amount": "6.442841952e-8",
      "usd": "0.0000012885683904",
      "valueInCurrency": "6.442841952e-8",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "39.100516560144370997564",
    "valueInCurrency": "13.844437199999998601572",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "280",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "39.100516560144370997564",
    "valueInCurrency": "13.844437199999998601572",
  },
  "totalMaxNetworkFee": {
    "amount": "0.00100006442841952",
    "usd": "0.0200012885683904",
    "valueInCurrency": "0.00100006442841952",
  },
  "totalNetworkFee": {
    "amount": "0.00100006442841952",
    "usd": "0.0200012885683904",
    "valueInCurrency": "0.00100006442841952",
  },
}
`;

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=false,quotesRefreshCount=5 1`] = `
{
  "adjustedReturn": {
    "usd": "13.84343713557158048",
    "valueInCurrency": "13.84343713557158048",
  },
  "cost": {
    "usd": "0.15656286442841952",
    "valueInCurrency": "0.15656286442841952",
  },
  "gasFee": {
    "effective": {
      "amount": "6.442841952e-8",
      "usd": "6.442841952e-8",
      "valueInCurrency": "6.442841952e-8",
    },
    "max": {
      "amount": "6.442841952e-8",
      "usd": "6.442841952e-8",
      "valueInCurrency": "6.442841952e-8",
    },
    "total": {
      "amount": "6.442841952e-8",
      "usd": "6.442841952e-8",
      "valueInCurrency": "6.442841952e-8",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "14",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "totalMaxNetworkFee": {
    "amount": "0.00100006442841952",
    "usd": "0.00100006442841952",
    "valueInCurrency": "0.00100006442841952",
  },
  "totalNetworkFee": {
    "amount": "0.00100006442841952",
    "usd": "0.00100006442841952",
    "valueInCurrency": "0.00100006442841952",
  },
}
`;

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=true 1`] = `
{
  "adjustedReturn": {
    "usd": "13.8244359114316096",
    "valueInCurrency": "13.84343713557158048",
  },
  "cost": {
    "usd": "266.1755640885683904",
    "valueInCurrency": "0.15656286442841952",
  },
  "gasFee": {
    "effective": {
      "amount": "6.442841952e-8",
      "usd": "0.0000012885683904",
      "valueInCurrency": "6.442841952e-8",
    },
    "max": {
      "amount": "6.442841952e-8",
      "usd": "0.0000012885683904",
      "valueInCurrency": "6.442841952e-8",
    },
    "total": {
      "amount": "6.442841952e-8",
      "usd": "0.0000012885683904",
      "valueInCurrency": "6.442841952e-8",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "280",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "totalMaxNetworkFee": {
    "amount": "0.00100006442841952",
    "usd": "0.0200012885683904",
    "valueInCurrency": "0.00100006442841952",
  },
  "totalNetworkFee": {
    "amount": "0.00100006442841952",
    "usd": "0.0200012885683904",
    "valueInCurrency": "0.00100006442841952",
  },
}
`;
